骑士团，冲锋

--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -155,9 +155,7 @@
  HNN_Bo_Yi_Bo_eco:0 "薄一波"
  HNN_shi_yin_shun_eco:0 "印顺法师"
  HNN_chen_quzhen:0 "陈渠珍"
- HNN_tian_yingzhao:0 "田应诏"
  HNN_yuan_zuming:0 "袁祖铭"
- HNN_long_yunfei:0 "龙云飞"
  HNN_mao_ze_dong:0 "毛泽东"
  HNN_dai_jitao:0 "戴季韬"
  HNN_zhou_xicheng:0 "周西成"
@@ -202,9 +200,11 @@
  POLITICS_HNN_SONG_XILIAN_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1907年4月9日，大清帝国 湖南省 湘乡县§!\n§Y派系：§!§g第六军§!\n§Y军旅生涯：§!§g宋希濂生于一户富裕农民家庭，在这个女孩为主的家里，他是家中长子，由父、叔专门教授古文诗词。宋希濂先后就读于多所私塾，并于1921年入读长沙长郡中学，在那里他首次接触到革命活动。宋希濂积极投身于学生运动，并与同学们共同创办了《雷声》墙报，批评帝国主义、小军阀，甚至由于赵恒惕处决了工人运动领袖黄爱、庞人铨，而开始批判当局。\n\n从程潜创办的大本营陆军讲武学校毕业后，宋希濂说服陈赓等人与他一同前往新开办的黄埔军校。作为黄埔军校一期学员中最年轻的毕业生，他于1924年6月加入国民党，并参与了讨伐陈炯明的东征战役。宋希濂部在北伐战争中表现出色，甚至与直系军阀孟昭月部展开过肉搏战。\n\n然而，随着北伐军全线崩溃，宋希濂领溃兵撤入贵州，在那里与往日恩师程潜重逢。§!\n\n§Y重要信息：人事关系上宋希濂不属于第六军，但他与第六军的关系由来已久，因此实际上他被看作第六军的一员。此外，他与左派人士陈赓私交甚密。§!"
  HNN_song_xilian_for_desc:0 "§Y生于：§!§L1907年4月9日；大清帝国、湖南省湘乡§!\n§Y派系：§!§g第六军§!\n§Y背景：§!§L宋希濂生于一户富裕农民家庭，在这个女孩为主的家里，他是家中长子，由父、叔专门教授古文诗词。宋希濂先后就读于多所私塾，并于1921年入读长沙长郡中学，在那里他首次接触到革命活动。宋希濂积极投身于学生运动，并与同学们共同创办了《雷声》墙报，批评帝国主义、小军阀，甚至由于赵恒惕处决了工人运动领袖黄爱、庞人铨，而开始批判当局。\n\n从程潜创办的大本营陆军讲武学校毕业后，宋希濂说服陈赓等人与他一同前往新开办的黄埔军校。作为黄埔军校一期学员中最年轻的毕业生，他于1924年6月加入国民党，并参与了讨伐陈炯明的东征战役。宋希濂部在北伐战争中表现出色，甚至与直系军阀孟昭月部展开过肉搏战。\n\n然而，随着北伐军全线崩溃，宋希濂领溃兵撤入贵州，在那里与往日恩师程潜重逢。§!\n\n§Y备注：人事关系上宋希濂不属于第六军，但他与第六军的关系由来已久，因此实际上他被看作第六军的一员。此外，他与左派人士陈赓私交甚密。§!"
  HNN_chen_quzhen_bio:0 "§g陈渠珍1903年考入湖南武备学堂第一期附设的兵目班，1904年因成绩优异升入将弁班，1906年毕业分配在长沙新军第四十九标任队官，并加入中国同盟会。1907年经湖北巡抚张学簪介绍，持赵尔巽的介绍信，偕同乡、旧学友林修梅等五人投奔川边大臣赵尔丰，任新军六十五标队官。宣统元年（1909年）英军入侵西藏，七月，钟颖率部进军西藏，陈渠珍被任命为援藏军一标三营（管带林修梅）督队官，参加了工布江达、波密等地战役。川边大臣赵尔丰抵昌都，撤销林的管带职务，委陈渠珍代之，进军驻守工布江达。1911年10月，武昌起义爆发的消息传到西藏后，进藏川军中的哥老会组织积极响应，其部属还杀死了协统罗长裿。第一次驱汉事件后，陈渠珍深知形势危殆，策动手下湘黔滇籍官兵115名，取道羌塘草原，翻越唐古拉山入青海返回内地，辗转七个多月，直至民国元年6月到达西宁，全队仅七人生还。回到湘西，负责督办开河工程，湘西镇守使田应诏保奏其开河有功，北洋政府查办在西藏时协统罗长琦被杀案，被诬告陈是主谋，逮解送京。陈渠珍力辩得直，又得傅良佐担保，方得脱案。1913年任湘西镇守使署中校参谋、副参谋长。主办军官训练团。1917年护法战争时期，湘西镇守使田应诏组织护法军第一路军，陈任参谋长兼第一梯团长，旋又代理第一路军司令。1920年湘西镇守使田应诏中将因拥护程潜被谭延闿架空调往长沙；谭延闿任命陈渠珍为湘西巡防军统领、辰沅剿匪总指挥。自此掌握了湘西军政大权。1925年，四川军阀熊克武部侵入湘西。省长赵恒惕任命陈为澧州镇守史、湘西屯边使。自此陈渠珍彻底稳定了对湘西的控制权，而在大革命期间，其同样两面受用，北伐军时期，陈渠珍加入革命军。汤芗铭时期，陈渠珍又宣布效忠汤芗铭，但无论如何，始终没有人能撼动陈渠珍对湘西的控制。时至今日无人不称其为“湘西王”。§!"
- HNN_tian_yingzhao_bio:0 "§g田应诏于1896年进入湖南陆军将弁学堂学习，后被选送至东京振武学校（一所专为中国培养军事人才的学院）深造。1904年，田应诏于日本结识了孙中山，并加入了他的革命组织——同盟会。1916年，田应诏回国担任四川陆军速成学堂总办，该校培养出了未来的四川军阀刘湘和杨森，随后他参与了辛亥革命。\n\n在谭延闿1913年回到湖南后，任命他为辰沅道尹、镇筸镇台兼湘西镇守使。当“护法战争”爆发时，田应诏遵从副参谋长陈渠珍之策静观其变，直到邻近军阀张学济投靠孙中山，他才宣布效忠广州一方。战争期间，田应诏占领了常德城，但后来又被冯玉祥赶出湘西，被迫退守沅陵。\n\n在此期间，田应诏逐渐染上鸦片瘾，并将越来越多的权力移交给了陈渠珍。1921年，新任湖南省长赵恒惕邀请田应诏前往长沙重组湘西镇守使衙署。田应诏任命留守的陈渠珍为代理湘西镇守使，这一状况一直延续至今。§!"
  POLITICS_HNN_Yuan_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1889年6月9日；大清帝国、贵州省兴义县§!\n§Y派系：§!§N旧黔系§!\n§Y军旅生涯：§!§g作为严苛的袁廷泰之子，袁祖铭从小就对军事产生了浓厚的兴趣。1910年，兴义小学堂堂长王文华向贵州护军使刘显世举荐袁祖铭协助训练兴义乡团。护国战争爆发时，袁祖铭在王文华的统帅下加入了护国军一方。\n\n在王文华驱逐刘显世并夺取贵州政权后，袁祖铭开始密谋除掉他。1921年，袁祖铭暗杀了王文华，率领贵州重新归附北京，并于次年成为该省省长。但这激怒了云南督军唐继尧，他帮助刘显世东山再起，并将袁祖铭驱逐到四川。后又因袁祖铭干预当地冲突，导致杨森和刘湘联手将他赶出了四川。溃不成军的袁祖铭最终只得与国民党结盟，他的部队也变成了国民革命军第12军。\n\n北伐开始后，袁祖铭帮助唐生智入侵了湖南，但随着德意志帝国下场支持直系，总司令蒋介石在混乱中被杀，北伐很快便演变成了一场灾难。袁祖铭通过其下属赵毓松与吴佩孚展开谈判，并与北京重新结盟。袁祖铭再次被任命为贵州省督理，但他只控制着黔东。贵州省其余部分则处于唐继尧控制之下，他扶植其弟唐继虞担任贵州省长。尽管袁祖铭无法将唐氏兄弟赶出贵州，但他坚信总有一天可以惩罚他们的背叛行为。§!"
- POLITICS_HNN_long_yunfei_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1886年；大清帝国、湖南省凤凰§!\n§Y派系：§!§P湘西军阀§!\n§Y军旅生涯：§!§g龙云飞是苗族人，18岁时离家外出，沦为盗匪。入哥老会后的几年里，他结伙赌博，贩运烟土，包路护送客商。和那个时代的其他著名土匪一样，辛亥革命后他被任命为军官，并从营长一路晋升到师长。他在湘西地区活动，听命于湘西两巨头田应诏和陈渠珍，虽然并非善类，但他为人诚实。§!\n\n§Y重要信息：据称，因其非法商业活动，龙云飞在湖南拥有超过14公顷的土地，但他拒绝透露土地的具体位置。§!"
+ HNN_long_yunfei: "龙云飞"
+ HNN_long_yunfei_carm: "龙云飞"
+ POLITICS_HNN_long_yunfei_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1886年；大清帝国、湖南省凤凰§!\n§Y派系：§!§P湘西军阀§!\n§Y军旅生涯：§!§g龙云飞是苗族人，18岁时离家外出，沦为盗匪。入哥老会后的几年里，他结伙赌博，贩运烟土，包路护送客商。和那个时代的其他著名土匪一样，辛亥革命后他被任命为军官，并从营长一路晋升到师长。他在湘西地区活动，听命于湘西陈渠珍，虽然并非善类，但他为人诚实。§!\n\n§Y重要信息：据称，其人仍与哥老会有着密不可分的联系，并从事着非法商业活动，龙云飞在湖南拥有超过14公顷的土地，但他拒绝透露土地的具体位置。§!"
+ HNN_long_yunfei_carm_desc:0 "§Y生于：§!§L1886年；大清帝国、湖南省凤凰§!\n§Y派系：§!§P湘西军阀§!\n§Y背景：§!§L龙云飞是苗族人，18岁时离家外出，沦为盗匪。入哥老会后的几年里，他结伙赌博，贩运烟土，包路护送客商。和那个时代的其他著名土匪一样，辛亥革命后他被任命为军官，并从营长一路晋升到师长。他在湘西地区活动，听命于湘西两巨头田应诏和陈渠珍，虽然并非善类，但他为人诚实。§!\n\n§Y备注：据称，因其非法商业活动，龙云飞在湖南拥有超过14公顷的土地，但他拒绝透露土地的具体位置。§!"
  POLITICS_HNN_dai_jitao_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1891年；大清帝国、湖南省凤凰§!\n§Y派系：§!§P湘西军阀§!\n§Y军旅生涯：§!§g1921年从云南陆军讲武堂毕业后，戴季韬投身于湘军服役。1925年，他被任命为田应诏和陈渠珍下属的湘西屯边使署教导团团长。当国民党对湖南发动进攻时，他的地位受到了威胁，但幸运的是，国民大革命以失败告终，吴佩孚控制了华南地区。近十年来，汤芗铭对湘西镇守使一直很满意，戴季韬也致力于维护陈渠珍在湘西的实际领导地位。§!"
  POLITICS_HNN_zhou_xicheng_ARMY_DESC:0 "§Y陆军将领介绍\n生于：§!§g1893年4月7日；大清帝国、贵州省桐梓县§!\n§Y派系：§!§N旧黔系§!\n§Y军旅生涯：§!§g周西成生于地主家庭，十六岁进入桐梓县公立明德小学堂，1911年毕业后，一心想弃文就武。适逢赵文彬从保定武备学堂毕业，到黔北一带募兵，周西成与妹夫毛光翔相约入伍。辛亥革命后，周西成任军政府都督杨荩诚的副目。\n\n随后杨荩诚率部入侵湖南，攻至常德，命周西成驻守。1913年滇军据黔，周西成部遭到遣散。护国战争中，他在戴戡率领下，出师四川。激战正酣时，戴戡战死，周西成率其营突围回黔。直到1922年前，他完全控制了其旅，不过仍受袁祖铭全面指挥。\n\n出于对袁祖铭野心的忌惮，周西成趋承于袁的左右，博取袁的信任。国民党发动北伐战争后，袁祖铭与之结盟，这不过是权宜之策，而随后又在其下属周西成建议下背叛了他们。袁祖铭被北京方面任命为贵州督理，但黔地大部实际被滇军控制。这一局面持续了近十年，周西成也始终站在袁祖铭一边。\n\n§Y重要信息：他以总是率部亲自冲锋在前、直接指挥下属而闻名。\n\n周西成以在贵州开展大规模剿匪行动而闻名，他在该省设立了护商总所，并在沿途设立了商卡子，并实施了商业保险制度。\n\n周西成是个残暴的人，他有能力实施大规模的暴行，他也以严厉惩罚其辖区内的所有腐败行为而闻名，过去他曾处决过许多腐败官员，并枪杀过其他人。§!"
  HNN_he_jian: "何键"
@@ -271,8 +271,11 @@
  HNN_chen_quzhen_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1883年9月22日；大清帝国、湖南省凤凰县§!\n§Y派系：§!§P湘西军阀§!\n§Y军旅生涯：§!$HNN_chen_quzhen_bio$"
  HNN_chen_quzhen_mhc_desc:0 "§Y军官介绍：\n生于：§!§g1883年9月22日；大清帝国、湖南省凤凰县§!\n§Y派系：§!§P湘西军阀§!\n§Y军旅生涯：§!$HNN_chen_quzhen_bio$"
  HNN_chen_quzhen_advisor_desc:0 "§Y顾问介绍\n生于：§!§g1883年9月22日；大清帝国、湖南省凤凰县§!\n§Y派系：§!§P湘西军阀§!\n§Y政治生涯：§!$HNN_chen_quzhen_bio$"
+ HNN_tian_yingzhao: "田应诏"
+ HNN_tian_yingzhao_for: "田应诏"
+ HNN_tian_yingzhao_bio:0 "§g田应诏于1896年进入湖南陆军将弁学堂学习，后被选送至东京振武学校（一所专为中国培养军事人才的学院）深造。1904年，田应诏于日本结识了孙中山，并加入了他的革命组织——同盟会。1916年，田应诏回国担任四川陆军速成学堂总办，该校培养出了未来的四川军阀刘湘和杨森，随后他参与了辛亥革命。\n\n在谭延闿1913年回到湖南后，任命他为辰沅道尹、镇筸镇台兼湘西镇守使。当“护法战争”爆发时，田应诏遵从副参谋长陈渠珍之策静观其变，直到邻近军阀张学济投靠孙中山，他才宣布效忠广州一方。战争期间，田应诏占领了常德城，但后来又被冯玉祥赶出湘西，被迫退守沅陵。\n\n在此期间，田应诏逐渐染上鸦片瘾，并将越来越多的权力移交给了陈渠珍。1921年，新任湖南省长赵恒惕邀请田应诏前往长沙重组湘西镇守使衙署。田应诏任命留守的陈渠珍为代理湘西镇守使，这一状况一直延续至今。§!"
  HNN_tian_yingzhao_commander_desc:0 "§Y指挥官介绍\n生于：§!§g1876年；大清帝国、湖南省凤凰县\n§Y派系：§!§P湘西军阀§!\n§Y军旅生涯：§!$HNN_tian_yingzhao_bio$"
- HNN_tian_yingzhao_advisor_desc:0 "§Y顾问介绍\n生于：§!§g1876年；大清帝国、湖南省凤凰县\n§Y派系：§!§P湘西军阀§!\n§Y政治生涯：§!$HNN_tian_yingzhao_bio$"
+ HNN_tian_yingzhao_for_desc:0 "§Y顾问介绍\n生于：§!§g1876年；大清帝国、湖南省凤凰县\n§Y派系：§!§P湘西军阀§!\n§Y政治生涯：§!$HNN_tian_yingzhao_bio$"
 
  HNN_duo_hui_shi_he:0 "夺回施鹤"
  HNN_zai_ci_tu_xi:0 "发动突袭"
@@ -603,6 +606,10 @@
  HNN_wang_tianpei_add_tooltip:0 "使$HNN_wang_tianpei_effect$"
  HNN_wang_tianpei_helpful_tooltip:0 "§n有王天培作为顾问会使$HNN_wang_tianpei_effect$§!"
  HNN_wang_tianpei_is_helpful_tooltip:0 "§G王天培在我们的政府中工作会$HNN_wang_tianpei_add_tooltip$§!"
+ HNN_tian_yingzhao_effect: "§Y两巨头相关的决议§!增强"
+ HNN_tian_yingzhao_add_tooltip:0 "使$HNN_tian_yingzhao_effect$"
+ HNN_tian_yingzhao_helpful_tooltip:0 "§n有田应诏作为顾问会使$HNN_tian_yingzhao_effect$§!"
+ HNN_tian_yingzhao_is_helpful_tooltip:0 "§G田应诏在我们的政府中工作会$HNN_tian_yingzhao_add_tooltip$§!"
  HNN_huang_shiheng_effect: "§Y教育相关的决议§!增强"
  HNN_huang_shiheng_add_tooltip:0 "使$HNN_huang_shiheng_effect$"
  HNN_huang_shiheng_helpful_tooltip:0 "§n有黄士衡作为顾问会使$HNN_huang_shiheng_effect$§!"
@@ -1755,11 +1762,9 @@
  hungong.12.b:0 "释放"
  hungong.13.t:0 "大会结束"
  hungong.13.d.jiesu:0 "今天是大会的最后一天，大会到此可谓是完美召开，代表们在各项决议都投票完全之后，我们还有着最后一项最关键，但毫无悬念的决议：我们的省主席归属，而这毫无疑问是..."
- hungong.13.d.zhengbian:0 "随着大会内“妥协”的声音日益占据多数，还在悲伤中的唐生明无法容忍这一切。而在得知他们竟然还要放走头号反革命：赵恒惕之后，他更是怒不可遏，这怎么告祭那些为革命流血牺牲的将士？他要如何告祭他的亡兄？当日，他便只身与彭德怀、贺龙等其他军队领袖沟通并得到他们的默许。于是，在大会的闭幕式上，安保部队被替换成了可信之人，唐生明带着他的亲信部队轻易包围了整个会场，将那些偏离了革命路线的代表们暂时请出了会场，并重新开始省主席投票与赵恒惕问题投票。"
  hungong.13.a:0 "革命元老董必武同志高票当选省主席"
  hungong.13.b:0 "首义元勋彭德怀同志高票当选省主席"
  hungong.13.c:0 "革命元老何叔衡同志高票当选省主席"
- hungong.13.e:0 "唐生明夺取了省主席地位"
  hungong.19.t:0 "为宗教问题投票"
  hungong.19.d:0 "湖南有着很浓厚的宗教氛围，革命先烈唐生智甚至我们一小部分党员对佛教都有兴趣，但是这和工团主义及其核心有违背，因此有代表在大会上提出是否应该对宗教问题采取强硬态度进行某种干涉。这个问题引起了大家的广泛讨论，有人提出如今我们才刚刚夺取政权还不稳定，贸然和宗教势力发生冲突，一旦他们和他们影响较大的部分群众倒戈向保守反动势力我们的危机就会更大。对此大家争论不休。大家只能在党员不能信教问题上达成初步共识，而对于佛教的态度有待投票商定。"
  hungong.19.a:0 "封禁佛寺"
@@ -3101,7 +3106,7 @@
  hungong.87.d:0 "工商业和手工业的发展、改造工作。不要光看到热火朝天的一面。热火朝天很好，但应小心谨慎。要多和快，还要好和省，要有利于提高劳动效率。现在有点急躁的苗头，这需要注意。社会主义积极性不可损害，但超过现实可能和没有根据的事，不要乱提，不要乱加快，否则就很危险。不论从地区或从部门看，都会有不少尾巴，彻底实行民主改革的工作也还很多，条件不成熟的等一下不要紧，因为政权在我们手中，这是很大的保证。我们要使条件成熟，做到“瓜熟蒂落，水到渠成”。\n\n我们要加快建设工业化，但绝不要提出提早完成工业化的口号。冷静地算一算，确实不能提。工业建设可以加快，但不能说工业化提早完成。晚一点宣布建成社会主义社会有什么不好，这还能鞭策我们更好地努力。要真正巩固农业、手工业和资本主义工商业改造的成果，必须实现工业化才行。如果没有工业化，农业即使合作化了，也不巩固。手工业也是如此。\n\n各部门订计划，不管是十二年远景计划，还是今明两年的年度计划，都要实事求是。当然反对右倾保守是主要的，对群众的积极性不能泼冷水，但领导者的头脑发热了的，用冷水洗洗，可能会清醒些。各部专业会议提的计划数字都很大，请大家注意实事求是。"
  hungong.87.a:0 "周主席说得对"
  hungong.88.t:0 "向前辈巨人致敬"
- hungong.88.d:0 "今天，我代表新生代的科研人员们向中华科学家、文学家、美学家的前辈巨擘致敬。吴宪先生、侯德榜先生、李四光先生、柳诒徵先生、周树人先生、徐建寅先生、傅范初先生、徐寿先生、李善兰先生、顾观光先生、徐华封先生、李锐先生、张元济先生、陈垣先生、萨本栋先生、严济慈先生、戴芳澜先生、曾昭抡先生、陶孟和先生等豪杰们塑造了我们现在所立足的根基，我们应在全国范围内通过艺术、雕像、公共设施等方式纪念他们的形象与成就。新的公社将冠上他们的名字，新的社区也会依他们的思想而建，中华的普罗大众会获得进一步的解放。站在他们的肩膀上，我们建成了天堂，从他们的高度出发，我们去追求真正的乌托邦。他们的思想，加上钱学森及其战友的指引，我们的明日繁华将不同以往。田园牧歌般的技官乌托邦思想发源于美国，但成长于中华，现在我们终于将证明那不仅仅是个理论、是个狂想曲，更是看得见摸得着的现实。"
+ hungong.88.d:0 "在此，我谨代表新一代科研工作者，向中华民族杰出的科学家、文学家及美学家前辈致以最崇高的敬意。吴宪先生、侯德榜先生、李四光先生、柳诒徵先生、周树人先生、徐建寅先生、傅范初先生、徐寿先生、李善兰先生、顾观光先生、徐华封先生、李锐先生、张元济先生、陈垣先生、萨本栋先生、严济慈先生、戴芳澜先生、曾昭抡先生、陶孟和先生等诸位先贤，以卓越的学术成就和深远的思想贡献，共同奠定了我们今日立足的学术与文化基石。\n\n基于历史唯物主义的文化传承观，在此我建议在全国范围内通过艺术创作、纪念雕塑、公共设施命名等方式系统性铭刻先贤的学术形象与历史功绩。建议将新型科研共同体以学科奠基者命名，城市功能区的规划应体现其学术思想精髓，此举将有效促进全民科学素养的现代性提升。先辈们构建的学科范式与知识框架，为当代学者提供了超越性认知平台，使我们在其开创的学术维度上探索理想社会形态成为可能。\n\n我们承继前人的智慧，在他们的学术高度之上构建更加繁荣的社会，并以此为起点，探索更为理想的未来图景。他们的思想成果，与钱学森先生及其同仁的前瞻性指引，共同塑造了我们迈向未来的宏伟蓝图。源自西方的“田园牧歌式技官乌托邦”理念，在中华大地上生根发芽，并得以蓬勃发展。如今，我们正致力于将其从理论构想转化为切实可见的现实，证明这一理想不仅是学术上的畅想，更是可触可感的社会实践。"
  hungong.88.a:0 "站在他们的肩上，我们离未来的兴隆更近了"
  hungong.89.t:0 "粮食亩产会有多少？"
  hungong.89.d:0 "土地所能人们的粮食产量有多少？这是每一个农民都迫切想要知晓的，而今日在钱学森院长的带领下，由曹诚英女士等一系列农业专家在河南进行了周密的计算，最后得出了一个惊人的结论——没有上限！因为，农业生产的最终极限决定于每年单位面积上的太阳光能，如果把这个光能换算农产品，要比现在的丰产量高出很多。现在我们来算一算：把每年射到一亩地上的太阳光能的30％作为植物以利用的部分，而植物利用这些太阳光能把空气里的二氧化碳和水分制造成自己的养料，供给自己发育、生长结实，再把其中的五分之一算是可吃的粮食，那么稻麦每年的亩产量就不仅仅是想象中的两千多斤或三千多斤，而是两千多斤的20多倍！所以，只要我们有必需的水利、肥料等等条件，加上人们的不断创造，产量的不断提高是没有问题的。今天条件不具备，明天就会创造出来，今天还没有，明天一定会有！\n\n对此刘少奇同志更是提出了一句脍炙人口的口号："
@@ -3128,7 +3133,7 @@
  hungong.96.d:0 "据新华社郑州电，近日河南省西平县城关镇和平农业社第四队九点七亩小麦丰产试验田，总产6731斤，平均亩产700斤，这几亩小麦长的特别好，穗大且长，籽粒饱满，稠密均匀，每亩平均148620株，密得老鼠也钻不进地。最大的麦穗有130粒，一般的麦穗有七、八十粒，最小的麦穗也有50粒左右。这几亩小麦是6月18日收割，7月1日过秤入仓。参加这次收割、打场、扬场、过秤的还有城关镇委、西平县党政负责同志。为了进一步核实产量，河南省委又指示西平县委和城关镇委复查。最后证明高额丰产完全属实。中央干部们得知这个消息后也很兴奋，相信只要再过一段时间，也许是三年、五年亩产就能超过千斤！那时候的粮食真是吃都吃不完，对此钱学森做了一番解释“到时候粮食多了怎么办啊？……要考虑怎么吃粮食呢！……农业社员们自己多吃嘛！一天吃五顿也行嘛！”。大家伙听了都哈哈大笑，但也都沉浸在丰收的喜悦中。"
  hungong.96.a:0 "土地潜力无穷尽，亩产多少在人为"
  hungong.97.t:0 "革命的未来"
- hungong.97.d:0 "随着新生的我国开始推行乌托邦技官统治与民主委员会主义，中科院院长[HNN.GetLeader]现在开始望眼整个中华——这片土地如今满是他的造物，他一路以来所追随的由周恩来开创的愿景在此将被塑造成型。从珠穆朗玛的山峰到曾母暗沙的汪洋，技术领的疆域遍布广袤的大陆，将真正的革命和乌托邦社会主义带向技官主义统治下的每一个个体。\n\n然而，有人会问：“为什么要就此止步？”既然我们高效、繁荣、平等的制度运作得如此完美，我们为什么不把我们真实的革命愿景，对人类理性的救赎传播给地球上的所有人呢？[HNN.GetLeader]虽然算不上是国际主义者，我国的经济、工业实力尽管有了质的飞跃，但是相对落后。但是，我们也相信着我们的制度是如此的优越，而一场世界性的革命，必将改变整个世界的局势，在我们共同迈向真正完美的社会过程中摆脱党派之争与派系主义。我们该怎么办？"
+ hungong.97.d:0 "随着新生的我国开始推行乌托邦技官统治与民主委员会主义，中科院院长[HNN.GetLeader]目光远眺，审视着整个中华大地——如今，这片土地承载着他的构想与实践，也承载着他自始至终追随的周恩来所开创的理想蓝图。自珠穆朗玛之巅至曾母暗沙之滨，技官治理体系的影响力已覆盖广袤疆域，标志着真正的革命与乌托邦社会主义在技官主义框架下的全面推进。\n\n山海连邦国，风云卷巨轮。\n\n新程承大志，共济向星昏。\n\n然而，人们不禁要问：“我们为何要止步于此？”既然这一高效、繁荣、平等的制度已然展现出卓越的运行能力，为何不进一步将这场关乎人类理性救赎的革命推向全球？尽管 [HNN.GetLeader] 并非严格意义上的国际主义者，尽管我国的经济与工业基础虽经历飞跃发展但仍相对滞后，我们依然坚信本国制度的优越性。倘若一场全球性的革命得以展开，必将重塑世界格局，使人类在迈向真正理想社会的进程中超越党派纷争与派系对立。那么，我们应当如何抉择？"
  hungong.97.a:0 "我们还有很多未竟之事"
  hungong.97.b:0 "我们将在整个亚洲推行我们的事业"
  hungong.97.c:0 "拿起武器，世界革命！"
