--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -946,6 +946,8 @@
  LEC_hui_ji_liang_hog: "惠济良"
  LEC_yu_bing_hog: "于斌"
 
+ LEC_shang_hai_qi_shi_tuan_tooltip: "§Y我就观看，见有一匹白马；骑在马上的，拿着弓，并有冠冕赐给他。他便出来，胜了又要胜。§!"
+
  HUI_JI_DESC:0 "惠济良主教是一位法国罗马天主教耶稣会会士。1877年10月1日，惠济良出生于法国布列塔尼地区的埃物朗（Évran），1896年入耶稣会修道。1903年前往中国上海徐家汇，继续攻读哲学、神学。1910年6月10日祝圣为耶稣会神父，此后先后在浦东、海门等地传教，任震旦大学法语教师，以及徐家汇修院院长。1928年6月25日，罗马教廷任命惠济良为南京宗座代牧区辅理主教，10月3日，由天主教献县教区主教、耶稣会士刘钦明祝圣，天主教烟台教区主教罗汉光、天主教宁波教区主教戴安德襄礼。1931年5月13日，姚宗李主教去世，惠济良接任南京代牧区主教一职。1933年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区，惠济良留在上海，继续担任上海代牧区主教；无锡以西划给南京代牧区，主教为于斌。"
  YU_BING_DESC:0 "于斌，圣名保禄，号野声，黑龙江省海伦县人，出生于黑龙江兰西县。于家祖籍山东省昌邑县的于家莊，清朝末年，于斌的曾祖父于文成闯关东来到黑龙江。在于斌6岁时，父亲于水源去世，7岁时母亲萧氏也去世。因此于斌是由祖父母抚养长大，祖父为中医，生活并不富裕，也和其他乡村少年一样为家中放猪，但有机会进私塾接受教育。1912年，于斌11岁时，他的祖父母迁居到海伦县若瑟屯，这件事对于斌一生的影响极大。因为若瑟屯正是黑龙江省最重要的一个天主教村庄，正如河北省的东闾村、山西省的六合村和察哈尔省的西湾子一样，这一类天主教村庄绝大部分家庭都是天主教徒，宗教气氛浓郁，是各教区内年轻神父和修女的主要来源地，也是天主教会抱以厚望的发展基地。地处塞外的若瑟屯在这一类天主教村庄中资历最浅，在1902年才由法国巴黎外方传教会的神父陆恒之创建，但几年间吸引来上百户天主教徒，于斌的祖母在迁居若瑟屯后不久，就接受了天主教信仰。不久陆神父发现于斌是个可造之才，于是先后保送他进入海伦县的高等小学和黑龙江省第一师范学校就读，希望他将来能担任村里的教师。于斌在14岁那年洗礼，圣名保禄。他的号“野声”则来源于《圣经》中圣若翰洗者的旷“野”的呼“声”。\n\n1919年五四运动爆发时，于斌18岁，正在黑龙江省第一师范学校就读，他被同学们推为学生团团长，多次在街头发表演说而风靡省城。当时的黑龙江督军鲍贵卿准备逮捕他，于斌被迫辍学，返回若瑟屯避风。1920年，于斌19岁，他决定终身修道。不过因为他是家中长房唯一的男孩，祖父希望他在世俗事务上成就大事业，陆神父也劝他谨慎从事。最后由于得到祖母由氏的大力支持，于斌得以顺利进入位于吉林省城的吉林神罗修道院，先在小修道院学习拉丁文，中间到上海震旦大学预科学习法文一年即毕业，传为美谈，然后再回到吉林的大修道院学习神学。1924年时以23岁之龄被保送到罗马宗座传信大学研读哲学、神学。\n\n直到1933年，在取得了三个博士学位后，于斌离开已经居留10年的意大利罗马，圣座本想让其出任圣座大使，但他诚挚表达想回自己国家传教。他由罗马回国，回国后任中华全国公教进行会总监督。同年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区。由于斌担任南京宗座代牧区宗座代牧。\n\n1936年，由于八省内乱的硝烟日渐浓郁，南京宗座代牧区便暂时转移至上海办公，而这却给于斌带来了更大的“惊喜”..."
 
