--- a/localisation/KX_Guides_gui_l_simp_chinese.yml
+++ b/localisation/KX_Guides_gui_l_simp_chinese.yml
@@ -332,9 +332,6 @@
  guides.80.t:0 "澳大拉西亚指南"
  guides.80.d:0 "问：工党/兰工党？\n答：选举前的一系列事件中按照提示信息选择有利于工党的选项，保证工党的势力不低于其它政党，让其赢得选举。若在选举前工党完成了统一，则可以在正统工党和兰工党之间进行选择。\n\n问：国民党/乡村党？\n答：如果在选举前的一系列事件中选择莱瑟姆或者布鲁斯为国民党的领导人，那么联盟便会以国民党为主导进行改革；若选择休斯或者孟席斯，那么联盟会破裂，之后可以选择卡梅伦或者佩奇来领导乡村党。你可以手动选择是以国民党还是乡村党来进行联盟的改革，正式选举前也可以选择是以国民党还是乡村党为先。\n\n问：社会主义工党/世界产联/工会理事会/澳共/至上运动/并一运动?\n答：选举前的一系列事件中按照提示信息选择有利于社会主义工党的选项，保证社会主义工党的势力不低于其它政党，让其赢得选举。完成第一段国策树，让白军政变失败。完成革命相关决议，与新西兰的战争结果无关紧要。之后召开产业大会，选择中意的政党就可以了。\n\n问：皆澳盟/新旧卫队/布莱梅军政府？\n答：拆散国民党和乡村党的联盟，选举选皆澳盟。完成第一段国策树，镇压社会主义叛乱，之后便可以让白军中的一个派系上台。\n\n问：新西兰？\n答：如果想走除军团外的新西兰民主线、交好澳大利亚的话，就通过权力平衡的决议释放新西兰，否则就走社会主义工党线，让白军政变失败，就能换到新西兰，坚持125天白和。此外，如果走白军线或者无法快速结束白军内战的话，输掉权力平衡也会出现新西兰。\n\n问：“澳大拉西亚帝国”？\n答：非共和国体制且加拿大的投降倾向高于百分之九十，可以通过玩家专属选项建立澳大拉西亚帝国或改制共和国。"
  guides.80.a:0 "哇哦"
- guides.81.t:0 "奉天指南"
- guides.81.d:0 "问：如何成为拿破仑张作霖？\n答：通过武力统一中国，在完成国策“总统问题”时，让张作霖继续掌权并幸存下来，然后在完成国策“最后通牒”前先完成国策“人民的慈父”。\n\n问：各种乱七八糟的王朝在奉天如蜗牛般归来？\n答：通过武力统一中国，完成国策“总统问题”后，让张作霖身死再让杨宇霆夺权，一个多月后会触发关于君主制支持者的事件，支持他们，等待之后选择各个王朝（目前只有和人皇帝有国策后续，但是别担心，其他皇帝最终会有自己的后续）。"
- guides.81.a:0 "哇哦"
  guides.82.t:0 "阿拉什指南"
  guides.82.d:0 "问：阿拉什斡耳朵路线\n\n点“第三届全哈萨克大会”国策。\n1.激进社会主义路线（忠于俄国）：在代表要求布克伊哈诺夫辞职时让他留下来，社会主义者就会暴动，事件中选择第一个选项就是激进社会主义路线。\n2.杜托夫路线-奥伦堡哥萨克军团：在代表要求布克伊哈诺夫辞职时让他留下来，社会主义者就会暴动，事件中选择第三个选项就是激进社会主义路线。在保留布克伊哈诺夫的情况下宣布从俄国中独立，然后在和哥萨克有关的事件链中选择忽略他们，不久后杜托夫就会政变。\n3.伊斯兰修拉/社自/社民阿拉什：让布克伊哈诺夫辞职，宣布从俄国中独立。几天后就可以开始选举。选举中你就可以选择想走的路线。"
  guides.82.a:0 "哇哦"
@@ -568,6 +565,9 @@
  guides.78.t:0 "云南指南"
  guides.78.d:0 "问：龙云？\n\n答：如果唐继尧清洗总参谋部，或者共和派支持不足，或者没有向总参谋部认错，龙云就会掌权，但云南会开始内战。\n内战会有三种不同的情况，要以龙云身份赢得内战，请按照对应情况选择选项。\n在楚雄之战中，选择等待炮兵，然后在曲靖之战中选择保护谷口。\n在“攻占安顺”事件中，选择“就一天，不能再多了”，然后在毕节之战中选择分兵。\n在“防守毕节”事件中，选择防守城镇，然后在“攻克贵阳”事件中选择“猛攻贵阳，剑指清镇”。\n\n问：回民？\n\n答：让龙云打赢内战，然后完成国策中国化，在随后的事件里不要妥协硬刚到底，派陈果夫去大理。\n\n问：唐继尧怎么复辟大唐啊？\n\n答：先正常玩云南，别让他被政变（走左边的国策树，先准备对湖南发动战争，但别真得开战，然后别继续打，然后贿赂你的军队，然后和你的将军们在事件链上达成妥协或者不清洗他们)。然后就走孤立线，完成云南王国策，等到跳事件出来就好了。他可以统一中国，在三个美女里选一个做老婆，痛饮鸦片，然后嗝屁，让自己的老婆，遗子或者表亲上台。\n\n问：白族？\n\n答：让唐继尧复辟大唐，然后不顾国库硬享受"
  guides.78.a:0 "帅到"
+ guides.81.t:0 "奉天指南"
+ guides.81.d:0 "问：如何成为拿破仑张作霖？\n答：在张作霖退休事件中别让张作霖退休，然后清洗掉杨宇霆，通过武力统一中国，然后在完成国策“最后通牒”前先完成国策“人民的慈父”。\n\n问：张学良？\n答：让张作霖退休，然后将张氏集团的支持率提升到50以上或者将协和会的支持率压制在10以下。\n\n问：杨宇霆？\n答：让张作霖退休，然后把协和会的支持率提升到40以上，发动政变。\n\n问：各种乱七八糟的王朝在奉天如蜗牛般归来？\n答：先进入杨宇霆路线，然后进入倒向日本路线，随后统一中国，在一个多月后会触发关于君主制支持者的事件，支持他们，等待之后选择各个王朝（目前只有和人皇帝有国策后续，但是别担心，其他皇帝最终会有自己的后续）。"
+ guides.81.a:0 "帅到"
  guides.95.t:0 "清政府指南"
  guides.95.d:0 "问：吴佩孚大总统？\n\n答：走维新路线，但是让溥仪政变失败，然后可以直接完成吴佩孚大总统的国策。\n\n问：如何变为一贯道大清？\n\n答：走维新路线，和张天然合作，不要建立紧急政府，从一贯道得到的支持要大于30%，触发有关一贯道阴谋的事件后选择调查他们。\n\n问：阎锡山控制的大清？\n\n答：走维新路线，和阎锡山合作（许诺他现代化）。之后正常游玩即可。\n注：选择与阎锡山合作后强制进入本路线，如果要走青年党或其他路线请不要与阎锡山合作。\n\n问：两败俱伤？\n\n答：走宣统维新，在最后一个事件中选吴佩孚与溥仪同归于尽。之后在紧急会议事件与国策中让直系力量压倒满洲进入蒋百里路线、反之进入载涛路线。二者平衡进入江亢虎路线。蒋百里与江亢虎能够转变为共和制。\n\n问：青年党？\n\n答：走非阎锡山的维新路线，然后直接选和青年党合作。在统一后的政治斗争决议中，让左翼、右翼、陈启天任何一方支持度超过80即可进入后续个人路线。其中李璜（左翼）、曾琦（右翼）、陈启天（中间派）在对应派系胜出的情况下都能上台。而左舜生（左翼）、张荫梧（右翼）上台还需要他们各自的支持度超过30。\n\n问：张荫梧？\n\n答：在青年党统一后的政斗中让右翼获胜，且张荫梧的个人支持度超过30。然后他就会政变，在守卫复兴门的事件中，让张荫梧占领复兴门即可政变成功。\n\n问：第二次辛亥革命？\n\n答：走维新路线，和宗社党合作，举行第二次登基，在恐怖袭击事件中选择一查到底。卢香亭能够在商、汉、唐、宋、明、中华帝国中选一个复辟。于学忠则有可能能和国民党左派和谈统一。"
  guides.95.a:0 "帅到"
