--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1256,6 +1256,7 @@
  POLITICS_HNN_HU_YAOBANG_DESC:0 "胡耀邦生于湖南省浏阳县西岭镇中和乡苍坊村，家中因行九而乳名九伢子。1926年，胡耀邦在读完初小后，到文家市的里仁学堂读高小，学堂校长陈世乔、教师甘思藻、吴千晋等都是工团党员，胡耀邦因此开始吸收工团主义。1927年，大革命失败，里仁学堂被查封，陈世乔、吴千晋等人被北洋军阀逮捕并杀害。1929年，胡耀邦转到浏阳县立初级中学读书，并经本县杨桂英介绍，秘密加入青年团。胡耀邦回乡后，因为能够读书识字，被推举为乡团支部书记，团结乡村支援红军与三省边界革命根据地。1931年，当地乡团暴露，引发军阀赵恒惕的围剿，胡耀邦等人在革命武装的掩护下突围前往中央驻地，而胡耀邦因此留在青年部担任干事。1933年8月，升任青年部部长、兼任宣传部部长。9月正式加入中国工团党。\n\n如今他正式肩负起领导全中国政府的重任，稳定、和平、温和将是他执政的方针。"
  Kang_Shen_DESC:0 "康生，原名张宗可，字少卿（绍卿），生于山东省胶州大台庄当地的一个名门望族，先祖张若獬，崇祯七年进士，南京户部主事，祖父张鸿仪曾为贡生。由于其出生于书香世家，由幼年时代便开始接触文艺作品，因此擅长书法绘画。1924年，张宗可赴上海大学学习，并改名张溶。在大学学习时，担任上海总工会干事、上海大学特支书记。1927年大革命失败后，张宗可出逃海外，在法国的第三国际总部进修。但是在此期间张宗可逐步接受到俄国的布尔什维克思想与英国莫斯利发起的准则派运动的感染，他私下为自己取名康斯坦丁（Константи́н），其中文音译为康生。同样在流亡法国时期，康生被吸纳进入了周恩来领导的特科中，他也假装是中裔俄国人重新回到上海加入革命事业中，在特科的时日内由于其出色的能力，他成功晋升到了特科副手，兼行动科长的地位。"
  CHI_lin_biao: "林彪"
+ HNN_Lin_Biao_carm: "林彪"
  POLITICS_HNN_LIN_BIAO_DESC:0 "林彪出生于殷实的商人家庭，青年时期，他就见证了父亲的生意因军阀剥削而陷入困顿。他成为了一名左翼活动家，参加过各种学生罢课与抗议活动，后逃往南方投考新设立的黄埔军校。\n\n作为一名年轻学员，林彪钦佩校长蒋介石的气质。他在校内表现优异，后参与北伐，几个月就从见习排长晋升到营长。北伐失败后，他仍然追随叶挺，与国民革命军残余的大部队转入地下打游击。正是在闽赣的群山之中，林彪这个名字变得越来越响亮了。但也正是在闽赣他接受到了来自另一个革命根据地——湖南三省边界根据地传播的工团思想。尽管他对这些思想并没有太大兴趣，但他对这些人实际实现的布尔什维克制度更感兴趣，他在其中看到了一条有别于现在中国大多数革命者的“新”的道路。"
  HNN_he_long: "贺龙"
  HNN_He_Long_carm: "贺龙"
@@ -1326,7 +1327,7 @@
  HNN_totalist_party1:0 "工团党"
  HNN_totalist_party1_long:0 "共产派(Communist faction)\n§g由于实行了将布尔什维主义组织形式同工团主义理想结合的路线，湖南的中国工团党中布尔什维主义的影响较为巨大，甚至有一些党员公然宣称支持布尔什维主义而非英法工团主义，但是这群共产主义者长期无法形成一个统一的势力，其中长期分为反对极权宪章化的布尔什维主义者和支持极权宪章理念的布尔什维主义者，两者都宣称自己是正统。不过如果革命的激进需要没有被满足，这些共产主义者也可能会获取更多力量进行进一步行动。§!"
  HNN_syndicalist_party1:0 "工团党"
- HNN_syndicalist_party1_long:0 "中国工团党湖南总部\n§g在国民革命失败后，董必武这一类的湖南工团党员慢慢放弃了过去的幻想，从城市走向农村开始尝试建立农村革命根据地，并且最终确立了工农并重并且结合布尔什维主义组织和工团主义目标的纲领，这最终导致了其同陈独秀和李立三二人领导的秉持原教旨工团主义和委员会共产主义的守旧派的决裂。在湖南工团党革命成功后，湖南总部内部分为了由董必武、何叔衡为代表的文官派以及彭德怀领导的支持更加强硬政策的军队派两大派系。§!"
+ HNN_syndicalist_party1_long:0 "中国工团党湖南总部\n§g在国民革命失败后，董必武这一类的湖南工团党员慢慢放弃了过去的幻想，从城市走向农村开始尝试建立农村革命根据地，并且最终确立了工农并重并且结合布尔什维主义组织和工团主义目标的纲领，这最终导致了其同陈独秀和李立三二人领导的秉持原教旨工团主义和委员会共产主义的守旧派的决裂。在湖南工团党革命成功后，湖南总部内部分为了由董必武、何叔衡为代表的根据地以及彭德怀领导的支持更加强硬政策的军运派两大派系。§!"
  HNN_radical_socialist_party1:0 "工团党"
  HNN_radical_socialist_party1_long:0 "合作派\n§g虽然湖南的中国工团党独立自主地夺取了湖南政权，但是湖南在中国革命中的未来路线尚且不明晰，所以党内存在一部分主张同国民党左派进行更近一步合作的党员，其领袖就是同董必武一同建设了湘赣闽边界革命根据地的何叔衡。合作派认为中国革命面临内外反动势力的重重压力，只有同老盟友国民党左派联合起来才有未来。§!"
  HNN_social_democrat_party1:0 "工团党"
@@ -1343,19 +1344,24 @@
  HNN_paternal_autocrat_party1_long:0 "南直系余孽\n§g南直系是汤屠夫领导的反动军阀，他们同赵恒惕余孽一样是反革命的刽子手。§!"
  
  HNN_totalist_party_dbw:0 "工团党"
- HNN_totalist_party_dbw_long:0 "极左派\n§g极左派正如其名字所说是中国工团党当中的极左派，其中占主力的共产主义者公然宣称支持布尔什维主义而非英法工团主义，但是这群共产主义者长期无法形成一个统一的势力，其中长期分为反对极权宪章化的布尔什维主义者和支持极权宪章理念的布尔什维主义者，两者都宣称自己是正统。而在董必武领导的文官派当选后，反极权主义的共产主义派系又分为了任弼时领导的亲近董必武自由工团主义政策的布哈林派、反自由工团主义的正统派、支持托洛茨基主义的国际派等等，所以最终掀不起什么分浪。而支持极权主义的共产主义者中可以分作亲军队派和反军队派，在董必武当选后，又分裂为了以陈云为代表支持市场经济的右派以及反渐进政策的左派。不过在共产主义者以外，随着董必武当选，另一股极权主义势力兴起，他们对布尔什维主义并不热衷，而是更喜欢诞生自无政府工团主义实践中的国家工团主义等宪章极权主义，随着渐进政策的运行，这群极权派正在逐渐成长，他们最后会变成什么样子，谁也不知道。§!"
+ HNN_totalist_party_dbw_long:0 "极左派\n§g极左派正如名字所说为党内的极左派。其中的共产主义者公然宣称支持布尔什维主义而非英法工团主义，不过由于其中长期分为反对极权宪章化的布尔什维主义者和支持极权宪章理念的布尔什维主义者，其长期陷入争吵无法形成一个强有力的统一政治集团。而在董必武领导的根据地派当选后，反极权主义的共产主义派系又分为了任弼时领导的亲近董必武自由工团主义政策的布哈林派、反自由工团主义的正统派、支持托洛茨基主义的国际派等等，所以最终掀不起什么分浪。而支持极权主义的共产主义者再董必武当选后又分裂为了，代表支持市场经济的右派以及反渐进政策的左派。但在其之外，随着董必武当选，另一股极权主义势力兴起，他们对布尔什维主义并不热衷，而是更喜欢诞生自英法工团主义实践中的国家工团主义等宪章极权主义，随着渐进政策的运行，这群极权派正在逐渐成长，并逐渐超越共产主义者成为极左派的主力，他们最后会变成什么样子，这谁也不知道。§!"
+ HNN_syndicalist_party_dbw:0 "工团党"
+ HNN_syndicalist_party_dbw_long:0 "中国工团党湖南总部\n§g在国民革命失败后，董必武为首的湖南支部工团党员放弃了教条主义的城市中心幻想，开始立足农运尝试建立农村革命根据地，并最终确立了工农并重、结合布尔什维主义组织和工团主义目标的纲领，这最终导致了同陈独秀和李立三二人领导的秉持原教旨工团主义和委员会共产主义的中工盟的决裂。但如今湖南工团党的政权的建立证明了我们道路的正确，在工农代表大会之后，董必武再次被选举担任湖南革命政权的领导人和工团党主席，立足工农并重的主张和中国半殖民地半封建主义社会的现状，工团党在董必武主席领导下将会采取以工农联盟为基础渐进的革命策略，确立工团主义法治，先联合民族资产阶级和小资产阶级推进民族民主革命打倒地主阶级、帝国主义和军阀的反动统治，接着再走向完全的工团主义民主制度。§!"
  HNN_radical_socialist_party_dbw:0 "工团党"
- HNN_radical_socialist_party_dbw_long:0 "前国民党员\n§g在国民党左派的二次国民革命失败后，大量的国民党左派党员和前工团党成员逃亡来到了湖南的革命政权。其中很多人选择加入了工团党，虽然其中许多人因为历史原因遭到了歧视，但是像周恩来这样的人才还是在党内平步青云。不过比起工团主义理念，其中很多人更认同布尔什维主义或者目前董必武实行的渐进社会主义。§!"
- HNN_social_democrat_party2:0 "工团党"
- HNN_social_democrat_party2_long:0 "红色军官\n§g湖南临时革命公社中的各个红色军官大多来自唐生智生前领导的国民革命军第八军，其中的激进派以彭德怀和贺龙为代表，同工团党有着极深的渊源，许多如贺龙和彭德怀自己就是工团党员。而温和派军官如刘兴和李品仙，对工团党激进的社会主义没有那么热衷，他们更倾向于唐生智主张的温和农业社会主义。在革命刚成功后的湖南紧急工农代表大会上，红色军官们由于唐生智去世而唐生明悲痛欲绝选择支持彭德怀建立军队派，在大会解散后，军队派也随之解散，但是红色军官们还是作为一个重要政治势力存在。§!"
- HNN_social_democrat_party_dbw:0 "红色军官"
- HNN_social_democrat_party_dbw_long:0 "红色军官\n§g在国民党左派的第二次国民革命失败后，大量支持社会主义的国民党左派军官选择了投奔了湖南的工团主义政权，其中一些人可能并不支持工团主义，但是却是社会主义者或者亲社会主义者，其中有大量临委会军官，当然也有一些复兴社军官如青年军官林彪。§!"
+ HNN_radical_socialist_party_dbw_long:0 "合作派\n§g虽然工团党已经选择了独立自主的革命道路，但是党内仍然有一些党员支持恢复北伐期间工团党和国民党的合作，尽管董必武当选后其势力逐渐减弱，但以何叔衡为首的合作派仍然是工团党和国民党沟通交流的桥梁。§!"
+ HNN_social_democrat_party_dbw:0 "工团党"
+ HNN_social_democrat_party_dbw_long:0 "红色军官\n§g湖南临时革命公社中的各个红色军官大多来自唐生智生前领导的国民革命军第八军，其中的激进派以彭德怀和贺龙为代表，同工团党有着极深的渊源，许多如贺龙和彭德怀自己就是工团党员。而温和派军官如刘兴和李品仙，对工团党激进的社会主义没有那么热衷，他们更倾向于唐生智主张的温和农业社会主义。在革命刚成功后的湖南紧急工农代表大会上，红色军官们由于唐生智去世而唐生明悲痛欲绝选择支持彭德怀建立军运派，在大会解散后，军运派也随之解散，但是红色军官们还是作为一个重要政治势力存在。§!"
  HNN_social_liberal_party_dashan:0 "小资产阶级民主派"
  HNN_social_liberal_party_dashan_long:0 "小资产阶级民主派\n§g小资产阶级民主派代表的是城市的小资产阶级和所谓的中产阶级，其中大多由各类知识分子组成，他们同我们一样渴望民主同时也并非资本家，但是他们过于摇摆和分散，一不小心就会成为封建主义、帝国主义或者大资产阶级的传话筒。但是在我们新生的民主宪政中，我们将会让小资产阶级民主派保留一席之地，并且推动他们意识到资本主义民主的不彻底从而迈向真正的民主即工团主义民主。§!"
  HNN_market_liberal_party_dashan:0 "资产阶级民主派"
  HNN_market_liberal_party_dashan_long:0 "资产阶级民主派\n§g在目前的革命中，由于中国尚处于半殖民地半封建主义社会，民族资产阶级相对帝国主义、反动军阀和封建地主阶级三座大山来说仍然具有较大的进步性，故也是工农阶级及代表他们的工团党暂时的统战对象，故在新的民主中也具有一席之地，不过大资产阶级的诞生将会被严格避免，同时资产阶级民主派由于其软弱和不彻底性，绝不能够成为目前民主的主导力量。§!"
  HNN_social_conservative_party_dashan:0 "封建主义残余"
  HNN_social_conservative_party_dashan_long:0 "封建主义残余\n§g封建主义是目前中国获得民主和解放的最大敌人，长期以来他们都和军阀还有帝国主义虚与委蛇，有时候还会利用赵恒惕这种反动派以所谓民主的面目出现在世人面前。而在真正的民主宪法在工团党的主导下修订后，封建主义被正式列为了民主和新国家的敌人。§!"
+
+ HNN_radical_socialist_party_kmt:0 "工团党"
+ HNN_radical_socialist_party_kmt_long:0 "前国民党员\n§g在国民党左派的二次国民革命失败后，大量的国民党左派党员和前工团党成员逃亡来到了湖南的革命政权。其中很多人选择加入了工团党，虽然其中许多人因为历史原因遭到了歧视，但是像周恩来这样的人才还是在党内平步青云。不过比起工团主义理念，其中很多人更认同布尔什维主义或者目前董必武实行的渐进社会主义。§!"
+ HNN_social_democrat_party_kmt:0 "红色军官"
+ HNN_social_democrat_party_kmt_long:0 "红色军官\n§g在国民党左派的第二次国民革命失败后，大量支持社会主义的国民党左派军官选择了投奔了湖南的工团主义政权，其中一些人可能并不支持工团主义，但是却是社会主义者或者亲社会主义者，其中有大量临委会军官，当然也有一些复兴社军官如青年军官林彪。§!"
 
  HNN_totalist_party_pdh:0 "工团党"
  HNN_totalist_party_pdh_long:0 "极左派\n§g极左派正如其名字所说是中国工团党当中的极左派，其中占主力的共产主义者公然宣称支持布尔什维主义而非英法工团主义，但是这群共产主义者长期无法形成一个统一的势力，其中长期分为反对极权宪章化的布尔什维主义者和支持极权宪章理念的布尔什维主义者，两者都宣称自己是正统。而在彭德怀领导的军队派当选后，布尔什维主义者中又产生了大量的亲军队派。不过在此之外，随着各路左翼人士慕名来到成功的革命临时公社，一些更加亲近极权宪章而非布尔什维主义的宪章极权主义势力也成长起来。§!"
@@ -1439,35 +1445,35 @@
  HNN_di_yi_ci_hnn_dai_bioa_da_hui_desc:0 "随着工团主义者在全省内夺取政权，湖南省内由工团党主导的湖南省§R紧急工农代表大会§!被立马召开，以解决这个新生的§R社会主义共和国§!内的一些重要问题。这包括了外交、军事、经济、社会现状，以及最关键的，未来的革命战争期间的国家主席和党主席由谁担任？"
 
  HNN_dong_bi_wu_jiang_ling_dao_us:0 "董必武主席"
- HNN_dong_bi_wu_jiang_ling_dao_us_desc:0 "董必武在中国工团主义尚未流行之际就开始宣传工团主义，在五四运动，北伐战争中都有着十分活跃的身影。相对于国民党或是工团党党内的诸多激进派而言，董必武更加赞同革命是一个循序渐进的过程，他不同意立刻施行工团经济，彻底铲除私有化。而是主张暂时保留中小私人企业，在保留市场经济的前提下推动社会主义教育，社会主义法律的确立。"
+ HNN_dong_bi_wu_jiang_ling_dao_us_desc:0 "作为湖南总部的创办者和根据地派的元老，董必武在中国工团主义尚未流行之际就开始宣传工团主义，并且在北伐失败后不顾教条主义之流的反对开展了推行工农并重和对湘赣边界革命根据地的建设，并大胆地将布尔什维主义的党组织理论同工团主义结合，从而缔造出来了如今富有战斗力的工团党。相对于国民党或是工团党党内的诸多激进派而言，董必武根据其在根据地和北伐中的经验，其认为中国革命是一个循序渐进的过程，工团革命和彻底铲除私有制在如今是对革命不利的，故其主张在暂时保留中小私人企业和市场经济前提下先推进工团主义教育和工团主义法律的建设，在推翻封建主义、帝国主义和军阀三座大山后再继续推进向彻底的工团主义。"
  HNN_xin_ding_dan:0 "重续订单"
- HNN_xin_ding_dan_desc:0 "我们否定过去湖南的反动政权及其背后的封建地主、反动军阀和大买办阶级。但是我们并不会一棒子打倒过去的所有政策，尤其是我们渐进的革命政策以及中国半封建半殖民地的现实要求我们同民族资产阶级统战打倒三座大山的时候，过去湖南同广东的良好贸易关系将会被努力恢复从而帮助我们将湖南劳动者生产的产品卖向两广从而卖向全国。不过这次最终获利者不再是军阀、买办和封建地主，而是光荣的工农阶级。"
- HNN_zheng_fu_gan_YU_shi_chang_jing_ji:0 "有限市场化"
- HNN_zheng_fu_gan_YU_shi_chang_jing_ji_desc:0 "湖南是一个落后的农业大省，在这样的地方一味的强求所谓的一步发展到工团主义社会是痴人说梦的。在到达那个阶段之前，董必武认为需要一个缓冲时期，在这个时期中，允许发展一定程度的私营经济，尊重有限的市场空间。直到大工业化的原始积累达到能够支撑我们达到工团主义的时期。" 
+ HNN_xin_ding_dan_desc:0 "按照辩证唯物主义，我们否定湖南反动政权及其背后的地主、军阀和买办，但并非否定其过去所有政策。当中国半封建半殖民地的现实要求我们同民族资产阶级建立统一战线打倒三座大山的时候，过去湖南同广东的良好贸易关系将会被努力恢复从而帮助我们将湖南劳动者生产的产品卖向两广从而卖向全国。不过这次最终获利者不再是军阀、买办和封建地主，而是光荣的工农阶级。"
+ HNN_zheng_fu_gan_YU_shi_chang_jing_ji:0 "市场的必要性"
+ HNN_zheng_fu_gan_YU_shi_chang_jing_ji_desc:0 "湖南是一个落后的农业大省，而中国则是一个落后的农业大国，在这样的地方一味地强求所谓的一步发展到工团主义社会是痴人说梦的。在到达那个阶段之前，董必武认为需要一个缓冲时期，在这个时期中，允许发展一定程度的私营经济，尊重有限的市场空间，直到大工业化的原始积累达到能够支撑我们达到完全的工团主义的时期。" 
  HNN_jian_li_wu_jia_ju:0 "建立市场监督管理局"
  HNN_jian_li_wu_jia_ju_desc:0 "社会主义的市场经济不能像资本主义那般任由他们无序发展，肆意扩张，为此董必武主席决定设立市场监督管理局以遏止无序扩张的市场。" 
  HNN_liang_tiao_tui_zou_lu:0 "两条腿走路"
  HNN_liang_tiao_tui_zou_lu_desc:0 "光发展农业是不够的，是单腿跳，短期内能够走路，但是不能长久。我们必须要拓展湖南贫瘠的工业，从最基础纺织业、食品加工业开始组建将湖南打造成一个工业强省。" 
  HNN_ban_bu_xin_xian_fa:0 "颁布新宪法"
- HNN_ban_bu_xin_xian_fa_desc:0 "过去的湖南省宪法只是披了一个民主的皮囊，实际上是军阀和地主阶级剥削工农劳动者的遮羞布。实践证明，在中国这个半封建半殖民地，只要广大工农阶级仍然被反动军阀、封建地主和帝国主义买办所压迫，那么中国甚至无法迎来真正的资产阶级民主。所以作为工农阶级的政党，工团党有责任撰写一套真正的民主宪法，这份宪法将会消灭旧宪法中为独裁专制铺路的漏洞，并且致力于建设法治和消灭封建主义、军阀主义和买办主义。不过让资产阶级自由派失望的是，虽然新宪法承认民族资产阶级目前的进步性并且保护其合法权益和所有制，但是其仍然更加偏向于工农阶级，毕竟我们的革命虽然是渐进的，但是其目标始终是走向社会主义民主而非资本主义。"
+ HNN_ban_bu_xin_xian_fa_desc:0 "工团党和国民党的合作在1927年失败的大革命中就已经结束，而如今随着我们靠自己力量夺取了湖南政权，我们将会独立自主地完成中华革命。但现如今的中华工农阶级不仅面对着资产阶级的剥削，更是面临着帝国主义及其买办走狗、封建地主阶级和军阀三座大山，于是我们将同国民党在内的一切进步势力合作，也会同仍具有进步性的民族资产阶级和进步民主人士合作。于是一部真正的民主宪法颁布将会成为目前工作要点，新宪法需要将地主阶级、军阀和买办视作专政对象，并剔除宪法中走向独裁的漏洞，为建立未来工团主义法治奠定基础。"
  HNN_jiao_yu_wu_chan_jie_ji:0 "教育无产阶级"
- HNN_jiao_yu_wu_chan_jie_ji_desc:0 "人民是伟大的，但是人民集合在一起却是茫然的。他们并不知晓工团主义是什么，他们也不完全知晓为什么资本主义、帝国主义对他们的压榨是如此的敲骨吸髓。我们需要广泛的宣传，教导他们为什么，并去回答他们提出的一切问题。"
+ HNN_jiao_yu_wu_chan_jie_ji_desc:0 "工农阶级是伟大的，但是工农阶级集合在一起却是茫然的。长期贫乏的精神资源让他们并不知晓工团主义是什么，也不完全知晓为什么资本主义、帝国主义对他们的压榨是如此的敲骨吸髓。我们需要广泛的宣传，教导他们为什么，并去回答他们提出的一切问题，这种宣传毫无疑问是党组织的任务，但更是新的工团主义教育体系的目标。"
  HNN_yi_wu_jiao_yu:0 "义务教育"
- HNN_yi_wu_jiao_yu_desc:0 "农民有了自己的地一定会想要自家的孩子下地干活而不是进学校脱产学习。但是，我们的未来需要的不是无数的农民，而是无数的技术工人和科研人员，更好的科技，才能有更高的生产力，否则过去半个世纪的耻辱历史还会在中华大地再次上演。为此我们要在各乡各村的农户家中做思想工作，让农工子弟安安心心的读书，费用政府承担。" 
+ HNN_yi_wu_jiao_yu_desc:0 "农民有了自己的地一定会想要自家的孩子下地干活而不是进学校脱产学习。但是，工团主义中国的未来是劳动人民摆脱了贫苦，是现代化和更好的科技，是更高的生产力，否则过去半个世纪的耻辱历史还会在中华大地再次上演，刚刚摆脱牢笼的中国工农阶级必将再次成为帝国主义的奴仆。为此我们要在各乡各村的农户家中做思想工作，让农工子弟安安心心的读书，费用政府承担。" 
  HNN_jie_fang_fu_nu:0 "解放妇女"
- HNN_jie_fang_fu_nu_desc:0 "长久以来，女性一直遭受着反动派思想家的压迫。就算是在军阀治下，在政府无情的把她们的兄弟送上前线受死时，她们也在无私的为国家做出贡献。是时候意识到她们对社会做出的贡献，合法化劳动妇女的权益了——不论是在战争年代还是和平时期。" 
+ HNN_jie_fang_fu_nu_desc:0 "长久以来，女性一直遭受着反动派思想家的压迫。就算是在军阀治下，在政府无情的把她们的兄弟送上前线受死时，她们也在无私地为中国做出贡献。是时候意识到她们对社会做出的贡献，合法化劳动妇女的权益了——不论是在战争年代还是和平时期。" 
  HNN_shi_ge_jiao_yu:0 "无产阶级的艺术"
- HNN_shi_ge_jiao_yu_desc:0 "艺术从来不是什么应该被束之高台，远离人民群众，仅供资产阶级贵族们地主们所享受的事物。那样的艺术只是一些俗套的空洞的享受。相反人民群众在劳动中一直不断的创造着属于普罗大众的真正的艺术。只有这些艺术才值得被推广。" 
- HNN_shi_he_zg_de_gong_tuan_zhu_yi:0 "湖南式工团主义"
- HNN_shi_he_zg_de_gong_tuan_zhu_yi_desc:0 "工团主义并非什么铁板一块的东西，除了我们都有着对美好未来的渴望以外，我们还有这许多可以商榷的地方。不仅是英法等国的工团主义无法被我们照搬。就算在国民党他们的左派所倡导的工团主义，那也是建立在江浙沪一带的工团主义，那儿的工业、教育都远比我们身处的湖南要发达得多。我们也无法照搬，我们需要根据湖南的工业特点，去传播适合湖南的工团主义。"
+ HNN_shi_ge_jiao_yu_desc:0 "艺术从来不是什么应该被束之高台，远离人民群众，仅供资产阶级、贵族们、地主们所独享的笼中之鸟。劳动人民在他们的辛苦劳动中也创作了大量的艺术，但却从未被人听见。现如今工农阶级已经是中国的主人，他们获得了教育，获得了权力，获得了生产资料，新的艺术应该是来自于他们的生活，传达出他们的意志。" 
+ HNN_shi_he_zg_de_gong_tuan_zhu_yi:0 "中国式工团主义"
+ HNN_shi_he_zg_de_gong_tuan_zhu_yi_desc:0 "教条主义者认为，工团主义作为发达的工业资本主义的产物只能在西欧实现，而在中国这样半殖民地半封建主义的农业大国，工团主义只能在沿海大城市有所萌芽。但工团党在湖南的实践已经证明了这种观点的谬误，在半殖民地半封建主义的中国，当然不能直接建成英法式的工团主义，但是依靠工农联盟、工团党民主集中制的组织，我们将会渐进地推进工团主义革命。"
  HNN_qiang_ying_tai_du:0 "强硬态度"
  HNN_qiang_ying_tai_du_desc:0 "工团党和国民党的合作在1927年失败的大革命中就已经结束，伴随着双方分别在江浙、湖南这一对邻省站稳脚跟。他们又不得不重新建立联系，但这一次主政湖南的工团党领导人们却不愿意再回到过去的那个合作关系中，他们希望彼此间保存对立互不隶属，只是合作共同北伐打败直系与清政府。"
- HNN_gu_li_nong_ye_shen_chan:0 "鼓励农业生产"
- HNN_gu_li_nong_ye_shen_chan_desc:0 "粮食既是我们军事发展的基石也是目前我们最好的出口货物。为了争取更多的资金，我们需要扩大的农业生产的投资，鼓励农民多开垦多播种，不用担心种出来没有销路。" 
- HNN_zu_jian_nong_hui:0 "强化农会"
- HNN_zu_jian_nong_hui_desc:0 "农会是农民们的天下，是为了农民的权益而斗争的地方，农村的一切都要收归农会，再由农民们自行分配。我们有的人还在犹豫着，不信任我们的农民，还抱有那种泥腿子怎么能治理好自己，农民是天然的保守主义、小资产阶级的旧思想，这一点尤其在我们的那些城市知识分子党员中最为突出。我们必须要用最严厉的教育告诉他们，中国的数万万农民有能力管理好天下，我们需要给农会更多的权力。" 
- HNN_fu_quan_gong_hui:0 "赋权工会"
- HNN_fu_quan_gong_hui_desc:0 "强势的工会是工团主义理论的核心，尽管在革命的早期我们需要将权力收归党所有，但是如今时局变化，我们需要割离一部分权力交予湖南省的各个工会，他们将获得对国民经济的重要掌控权。" 
+ HNN_gu_li_nong_ye_shen_chan:0 "耕者有其田"
+ HNN_gu_li_nong_ye_shen_chan_desc:0 "数万年来，土地对于农民来说是最渴望的珍馐，农民无时无刻不再渴望着属于自己的土地从而不再饱受地主的抽骨吸髓，不再将自己的妻儿卖给地主，不再饱受精神和肉体上的奴役和屈辱。工团党在革命根据地时期就是土地革命的坚定支持者，而如今夺取了政权，我们势必要实现农民“耕者有其田”的梦想，让数千万年被沉重奴役压弯脊髓的农民们站起来！" 
+ HNN_zu_jian_nong_hui:0 "农会民主"
+ HNN_zu_jian_nong_hui_desc:0 "农会是农民们的天下，是近代以来任何革命的农民运动的基石，是农民进行土地革命、同封建地主进行抗争的机构。而在农民已经当家作主的当下，农会依旧是农民维护其利益的场所，但更是其行使革命政权主人翁权力的机关，在工团党的革命教育和领导下，农民将会依托农会获得对农村进行自主治理的广泛民主权力，在这样的农会民主制度下" 
+ HNN_fu_quan_gong_hui:0 "工会赋权"
+ HNN_fu_quan_gong_hui_desc:0 "工人自发组织的工会在社会主义中的强势地位是工团主义理论的核心，也是工团党工人运动的基石，尽管在革命早期党在工会领导中采取集中管理制度，但现如今既然工农阶级已经夺取了政权，是失手适当恢复工会的自治权利，以让工人阶级更好地保护自己在工作场所中的民主权益，并以此为基础组织教导管理学的夜校，也推进工人以工会为单位在国企和产业合作社中逐步进行劳工民主管理。" 
  HNN_gong_nong_gong_he_guo:0 "工农联盟"
  HNN_gong_nong_gong_he_guo_desc:0 "无论是未来的中国，还是当下的湖南省，在极长的一个时期内都将是一个以工农联盟为主，尤其是以农民为主的国家。在我们的这个国家中工人将负责制造新的工业品用以发展工业和提供给农民新的先进的农具。而农民将为这样的发展提供充足的粮食。在董必武的计划中，这个社会将达成充足可靠的循环" 
  HNN_ge_ming_de_li_shi:0 "革命的历史"
@@ -1742,24 +1748,24 @@
 
 #湖南省紧急工农代表大会
  hungong.8.t:0 "湖南省紧急工农代表大会"
- hungong.8.d:0 "在工团党成功夺取了湖南的政权后，紧急代表大会便如火如荼地筹备了起来，由于湖南工团党在革命根据地时期一直贯彻“工农并重”的总路线，如今的代表大会也被称作工农代表大会，湖南省的各方革命力量的领导人以及工团党各个根据地派来的代表都汇集长沙讨论接下来新的湖南革命政权该如何发展。\n\n大会上主要有两种不同的声音，一方是以董必武、何叔衡为首的文官派，他们是由湘赣闽边界革命根据地等建设中成长起来的革命干部、在城市进行工人组织和地下革命运动的干部以及支持工团党的左派文官和知识分子三方面组成，另一方则是本次革命中在唐生智将军不幸遇难后得到军队内部革命派士官一致认可的新革命军人领袖彭德怀领导的军队派，其由在革命中唐生智将军的旧部等投靠工团党的国民党左派军队以及和他们关系亲密的工团党干部组成。两派在经济、军事、外交方面都有着巨大的争论。\n\n但是他们之间并非没有可以妥协的地方，这是由于文官派内部也就对国民党外交问题分为了董必武的强硬派和何叔衡的合作派。同时各派内部由于不同体系的革命实践经历不同对不同问题本身也没有彻底统一的看法。\n\n不过除了以上三位革命元老，唐生智的弟弟唐生明也被大家视作军队派领袖，但是他由于太过于伤心宣布放弃了竞选主席和参会。\n\n不过无论如何，接下来两周里，大会必须要决定出我们当之无愧的主席..."
+ hungong.8.d:0 "在工团党成功夺取了湖南的政权后，紧急代表大会便如火如荼地筹备了起来，由于湖南工团党在革命根据地时期一直贯彻“工农并重”的总路线，如今的代表大会也被称作工农代表大会，湖南省的各方革命力量的领导人、工团党各个根据地和各个工会派来的代表都汇集长沙讨论接下来新的湖南革命政权该如何发展。\n\n大会上主要有两种不同的声音，随着来自国民党左派和各个军队中的左翼军人大规模加入工团党，这两种声音逐渐变成了两个派系。\n\n第一个派系代表了大量土地革命根据地建设中成长起来的革命干部、工会运动干部、工团党知识分子和文官，他们基于1932上海起义失败，立足于湖南工团党内部由董必武等人构建起来的“工农并重”理论和当前半殖民地半封建主义社会现状，他们将工农联盟、联合各进步力量先进行民族民主革命再迈入工团主义的渐进革命便成为了工团党和中华无产阶级的唯一道路，由于其核心为董必武、何叔衡等湘赣边界根据地元老，这一派系也被不准确称呼为“根据地派”。第二个派系基于北伐惨痛失败和多年来工团党在斗争尤其是军事上的无力要求建立强有力的政治经济体制以服务于全国革命，由于其大量支持者都来自于工团党军运和国民党左派军官，这个派系也被称作“军运派”。\n\n不过军运派和根据地派内部也不是一件铁板，先不讨论来自各个系统的干部之间的矛盾，在根据地派内部在和国民党合作问题上，也分裂为了以董必武为代表、坚持独立自主进行革命路线的强硬派，和希望重建两党过去合作关系的以何叔衡为代表的合作派。\n\n不过基于当前工团党内部复杂政治现状和民主集中制组织模式，不管哪一派获得胜利，其政策都会永远改变中国工团党。"
  hungong.8.a:0 "那就开始！时间不等人！"
  hungong.9.t:0 "为经济政策投票"
- hungong.9.d:0 "大会的第一项日常关乎湖南省经济问题的解决方案，两派都有自己的主张。文官派结合对于中国半封建半殖民地的科学分析提出为了同封建主义和帝国主义斗争并且最终建设起来属于工农阶级的民主，所以在优先保障工农阶级的利益的前提下民族资产阶级有一定的统战价值，同时湖南在中国内部虽算不上经济强省但依靠长江同外界进行贸易也能为之后发展提供极大空间。而军队派则认为长江中下游把控在并不完全可靠的国民党与各类军阀手中，所以湖南工农能依靠的只有自己，应当建立起来集中且服务于工农阶级的经济体系来全面武装湖南。由于两者都有充足的现实论据基础和理论基础，双方僵持不下直到最终："
+ hungong.9.d:0 "大会的第一项日常关乎湖南省经济问题的解决方案，两派都有自己的主张。“根据地派”结合对于中国半封建半殖民地的科学分析提出先进行民族民主革命再最终建设起来属于工农阶级的民主是必经之路，为此必须在优先保障工农阶级的利益的前提下民族资产阶级有一定的统战价值，更何况湖南在中国内部并算不上经济强省，但只要依靠长江同外界进行贸易就能为之后发展提供极大空间。“军运派”则认为当长江中下游把控在并不完全可靠的国民党与各类军阀手中时候，湖南工农能依靠的有且只有自己，应当建立起来集中且服务于工农阶级的经济体系来全面武装湖南。由于两者都有充足的现实论据和理论基础，双方僵持不下直到最终："
  hungong.9.a:0 "军队派赢得多数"
- hungong.9.b:0 "文官派赢得多数"
+ hungong.9.b:0 "根据地派赢得多数"
  hungong.10.t:0 "为外交政策投票"
- hungong.10.d:0 "大会的第二项日常是关于同国民党关系的讨论，在整个会议中大量与会成员都曾加入过国民党，但是不管是如今的国民党还是曾经孙中山孙先生时期的国民党和我们的关系都不算是特别融洽，更别说其中长期派系林立导致其经常产生组织问题和立场问题，使得我们的很多人怀疑国民党是否真能带领工农阶级推翻封建主义和帝国主义大山而不是成为另一种军阀。我们是否应该保持早期同国民党的亲切关系？我们是应该像过去一样为了合作成为国民党的系属省还是应该坚持自同“陈李中央”分裂以来的独立政策，和国民党平等而和平地相处？"
+ hungong.10.d:0 "大会的第二项日常是关于同国民党关系的讨论，在整个会议中大量与会成员都曾加入过国民党，但是不管是如今的国民党还是曾经孙中山孙先生时期的国民党和我们的关系都不算是特别融洽，更别说其中长期派系林立导致其经常产生组织问题和立场问题，使得我们的很多人怀疑国民党是否真能带领工农阶级推翻封建主义和帝国主义大山而不是成为另一种军阀。我们是否应该保持早期同国民党的亲切关系？我们是应该像过去一样为了合作成为国民党的系属省还是应该坚持自同“陈李中央”分裂以来的独立政策，和国民党平等而和平地相处？""
  hungong.10.a:0 "强硬派赢得多数"
  hungong.10.b:0 "合作派赢得多数"
  hungong.11.t:0 "为军队政策投票"
- hungong.11.d:0 "大会的第三项日常是有关革命军队的改革问题，如今湖南省的革命军事力量维持内部的稳定尚且充足，但要是与直系或者滇系、川系军阀抗衡就略显不足了。针对此问题，彭德怀提出了效仿布尔什维克和国民革命军的红军构想。但是文官派系显然更加沉迷于传统的赤卫队那劳动群众自己拿起武器的理念，只不过提出改革其指挥系统使其更具战斗能力。"
+ hungong.11.d:0 "大会的第三项日常是有关革命军队的改革问题，如今湖南省的革命军事力量维持内部的稳定尚且充足，但要是与直系或者滇系、川系军阀抗衡就略显不足了。针对此问题，彭德怀基于过去的军运经验，提出必须建立起来一个最高的指挥部来集中领导革命军事。但根据地派作为从根据地运动和工会运动成长起来的干部代表，认为应当注重学习根据地群众运动经验，以武装群众为目标，从而为工团主义民主打好枪杆子上的根基。"
  hungong.11.a:0 "军队派赢得多数"
- hungong.11.b:0 "文官派赢得多数"
+ hungong.11.b:0 "根据地赢得多数"
  hungong.12.t:0 "如何处理赵恒惕等人"
  hungong.12.d:0 "在长沙攻城战中，我们的士兵俘虏了想要弃城而逃的赵恒惕，如今时候对他做出审判了"
  hungong.12.a:0 "处决"
- hungong.12.b:0 "释放"
+ hungong.12.b:0 "劳动改造"
  hungong.13.t:0 "大会结束"
  hungong.13.d.jiesu:0 "今天是大会的最后一天，大会到此可谓是完美召开，代表们在各项决议都投票完全之后，我们还有着最后一项最关键，但毫无悬念的决议：我们的省主席归属，而这毫无疑问是..."
  hungong.13.a:0 "革命元老董必武同志高票当选省主席"
@@ -3289,7 +3295,7 @@
  hungong.143.d:0 "得益于湖南工团党人在实践中确立的将布尔什维主义组织形式和工团主义目标相结合，布尔什维主义在湖南临时革命公社这个工团主义政权中的流传度不亚于工团主义。许多工团党的同志如彭德怀、董必武和毛泽东在演讲和工作中都会使用布尔什维主义和列宁主义的词汇，同时列宁等布尔什维克领袖在湖南革命临时公社列宁的名声也是特别好，其著作也在党内广泛流传和强调。虽然大部分工团党员仍然自称自己只是使用布尔什维克组织形式的工团主义者，仍有一些人公开宣称自己是布尔什维主义或者列宁主义者。不过由于其中分裂为了反极权主义化的布尔什维主义者和认同极权宪章的布尔什维主义者，且两边内部都有着巨大分歧，于是最终没有形成一个统一的成熟派系。\n\n不过随着董必武成功当选并且开始强调渐进的革命、社会主义法制和工农民主的建设。任弼时这样反对极权宪章并且支持渐进革命的布哈林主义者或者温和列宁主义者逐渐崭露头角，成为了董必武的自由工团主义政策的支持者。他们致力于推进工农民主意识、阶级意识和生产民主的建设，希望以此保证董必武的自由工团主义政策最终走向民主的无产阶级专政而非走向资产阶级国家。"
  hungong.143.a:0 "我们拭目以待"
  hungong.144.t:0 "三座大山"
- hungong.144.d:0 "在新宪法中，封建地主阶级、军阀和帝国主义被明确定位中华人民和民主的敌人，并且被赋予了一个在未来将会响当当的名字“三座大山”。长期以来，三者成为了一个庞大的同盟，互相合作，将中华人民禁锢在半殖民地半封建主义社会的噩梦中。而新的民主宪法注明工团党和他们所服务的工农阶级将会领导其同民族资产阶级和城市小资产阶级组成的统一战线推翻这三座大山，让中国摆脱半殖民地半封建主义从而渐进地走向工团主义。\n\n在工团党和新宪法的指导下，封建地主的土地和生产工具等财富将会被回收并且平等地分给农民从而完成千年来耕者有其田的梦想，愿意合作的地主也可以获得自己的那一份土地，而强硬的反动派的则将被依法处置。军阀的余孽将会被依法处置，而新的革命军队中将会推行军事民主和党的领导从而防止新军阀诞生。而买办的财产则会被充公，而民族资产阶级的中小企业将会在优先保证工人阶级利益的前提下获得鼓励。"
+ hungong.144.d:0 "在新宪法中，封建地主阶级、军阀和帝国主义被明确定位中华人民和民主制度的敌人，并且被赋予了一个在未来将会家喻户晓的名字“三座大山”。宪法认为，长期以来，三者互相媾和，将中华人民禁锢在半殖民地半封建主义社会的噩梦中。工团党政府新的民主宪法注明工团党和他们所服务的工农阶级将会领导其同民族资产阶级和城市小资产阶级组成的统一战线推翻这三座大山，让中国摆脱半殖民地半封建主义从而渐进地走向工团主义。土地革命和农会运动在新宪法下有着全所未有的合法性，而民族资产阶级产业也会在工人民主权利受到优先保护的基础上大力发展。\n\n为实现这一宪法目标，新成立的人民代表大会作为新政权的民主机构创新性地使用了英法工团主义政权的“人民代表制”，只不过将其从工农阶级民主暂时扩大到了资产阶级民主派和小资产阶级民主派也可以参与。\n\n 宪法还确立了新政府的组织形式，新政府的各个部门负责人将会学习苏俄的人民委员会，在工团党的领导下采取委员会制度同时保留公务员体制从而满足目前的社会治理需要。"
  hungong.144.a:0 "真正的民主"
  hungong.145.t:0 "寒冬已去"
  hungong.145.d:0 "胡贺春是一个非常谨慎的人，这就使得在商会其他兄弟们都在组织人马阻止赤匪入城的时候，胡贺春却在一门心思策划跑路。不过就和其他兄弟一样，他的计划也失败了，赤匪把长沙围的水泄不通，他根本钻不出去。不过好处是，那些积极反赤匪的兄弟要不进大牢要不被赤匪枪毙了，不过胡贺春除了家被一些工人洗劫了之外没啥损失。不过很快，胡贺春被劫走的钱就陆续回来了，工团党找上了他，告诉贺春他是有一定进步性的民族资产阶级，而现在新宪法施行渐进的革命，现阶段会联合民族资产阶级一起打倒封建地主、帝国主义和军阀这三座大山。胡贺春听明白了，那就是赤党还需要他胡贺春在南边的门道做生意，而柳大春作为生意人也愿意，于是日子慢慢又好起来了，美中不足的是，现在他现在只能有一个老婆了，厂子里面的工人每天工作只能干八个时辰，而且还老是要和工会打交道。不过贺春毕竟是打交道的好手，他现在正在新政府还有工会里面交朋友，或许老日子很快就回来了。"
@@ -3374,6 +3380,9 @@
  hungong.172.t:0 "兜兜转转"
  hungong.172.d:0 "长沙，初冬的寒风裹挟着硝烟的余味，在城头猎猎作响。湘江水色沉郁，仿佛映照着这座刚刚经历血火的城市。\n\n邓小平和张国焘率领着残余的川陕边革命军，披着一路征战留下的征尘，步入长沙北门。他们的身后，是因给养断绝、四面围攻而被迫放弃的川陕边革命根据地，而前方，则是尚未站稳脚跟的湖南临时革命政府。\n\n城中街巷间，百姓们议论纷纷。长沙易手不过月余，旧势力余党尚未肃清，湖南革命政府的根基仍然不稳，如今，这支疲惫不堪的队伍又平添了变数。\n\n邓小平骑在马上，目光坚毅，他的身旁，张国焘神色沉思，仿佛仍在思索下一步的出路。前来迎接他们的是湖南革命政府的代表，刚刚在长沙起事的同志们面露喜色，却也掩不住一丝忧虑——川陕失败的教训太过沉重，他们带回的除了人马，更有严峻的现实：革命并非只靠一腔热血便能立足。\n\n“长沙的局势如何？”李国焘翻身下马，径直向迎接者问道。“暂时稳住了，但北方的反攻随时可能到来。”对方低声道。\n\n邓小平点点头，望向城楼上飘扬的红旗。无论前方如何，他们已别无退路。川陕的失败必须吸取教训，革命的火种不能熄灭。此刻，长沙成了他们最后的希望，也是新的起点。"
  hungong.172.a:0 "拿起武器，我们的革命还没有结束"
+ hungong.173.t:0 "群众的语言"
+ hungong.173.d:0 "长期以来以教师“李子任”身份进行学生运动和地下情报工作的毛泽东同志，因为其独特的教育理念和丰富的工作经历，在经过工农代表大会和党中央委员会的统一表决以最高票数被任命为新的湖南工团党政府的文化与教育部长，在毛同志就职后，他立刻召集了党在教育行业的同志们召开了一场特别会议，在会议上其指出“我们是革命党，是为群众办事的，如果也不学群众的语言，那就办不好。”在工农夜校和新的教育体系中，讲课务必要通俗易懂，讲农民一听就懂的话，“讲打倒帝国主义就说，打倒洋财主嘛。”在大会最后，毛同志讲道：“我们工团党人好比种子，人民好比土地。我们到了一个地方，就要同那里的人民结合起来，在人民中间"
+ hungong.173.a:0 "生根、开花！”"
 
 #中社部
  hunqingxi.1.t:0 "125号目标人物 许世友"
