--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1300,6 +1300,7 @@
  POLITICS_HNN_LIN_Bo_Qu_DESC:0 "林伯渠生于湖南省临澧县修梅镇凉水井村，其父林鸿仪为晚清禀生。1902年考入湖南公立西路师范学堂，1904年官费留学日本早稻田大学攻读经济学。1905年加入同盟会，参加辛亥革命。1920年任孙中山大元帅府参议期间，经李大钊介绍接触工团主义思想。\n\n1926年任国民革命军第六军党代表兼政治部主任，参与北伐战争。大革命失败后秘密转入地下，利用其财政专长在上海为工团党筹措经费。1931年进入湖南三省边界根据地，主持建立苏区财政体系，首创「竹签代币」解决银元短缺问题。\n\n作为根据地「钱袋子」，他制定累进税制保障红军供给，同时通过白区关系网建立秘密贸易线，用桐油、茶叶从汉口换回药品和军火。其发明的「四联单」物资管理制度，使有限资源在逐次反围剿中发挥最大效能。这位蓄着八字胡的理财专家，用算盘为革命开辟了另一条战线。如今他临危受命担任国家主席，他会依旧以自己的方式将革命进行下去。"
 
  CHI_su_yu: "粟裕"
+ HNN_su_yu_cos: "粟裕"
  CHI_ye_ting: "叶挺"
  CHI_chen_geng: "陈赓"
  CHI_zhang_yunyi: "张云逸"
